--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@
   --heading--l--regular: clamp(40px, 5vw, 64px);
   --heading--m: clamp(30px, 4.5, 36px);
   --heading--s: clamp(20px, 4vw, 28px);
+  --heading--button: clamp(17px, 3.5vw, 20px);
   --body--m: 24px;
   --body--s: 20px;
 
@@ -74,17 +75,19 @@ html,
 body {
   width: 100%;
   height: 100%;
+  min-height: max-content;
 }
 
 body {
   display: grid;
-  grid-template-rows: 25% 1fr;
+  grid-template-rows: 20% auto;
   place-items: center;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   font-family: var(--ff-reg);
   background-image: var(--bg-img-l);
+  padding-block: calc(5svh + 50px);
 }
 
 /* --------------------- HEADER -------------------------- */
@@ -92,6 +95,7 @@ body {
 header {
   display: flex;
   justify-content: space-between;
+  align-self: start;
   align-items: center;
   width: clamp(700px, 80%, 1200px);
 }
@@ -216,7 +220,7 @@ aside.answere ul {
 aside.answere ul li {
   position: relative;
   width: 100%;
-  height: 92px;
+  height: 80px;
   border-radius: 18px;
   background-color: var(--purewhite);
   box-shadow: 0 16px 40px 0 #8fa0c124;
@@ -247,9 +251,8 @@ aside.answere ul li button span {
   font-size: larger;
   background-color: var(--lightgrey);
   border-radius: 0.5em;
-  width: 56px;
-  height: 56px;
   height: 100%;
+  aspect-ratio: 1 / 1;
 }
 aside.answere ul li button p {
   max-width: 65%;
@@ -321,10 +324,10 @@ aside.answere ul li:has(button.invalid) {
 #submit_button {
   position: relative;
   width: 100%;
-  height: 92px;
+  height: 80px;
   background-color: var(--purple);
   color: white;
-  font-size: var(--heading--s);
+  font-size: var(--heading--button);
   border-radius: 18px;
 }
 
@@ -529,10 +532,6 @@ body[data-theme="light"] {
   }
   aside.answere ul li {
     height: 80px;
-  }
-  aside.answere ul li button span {
-    aspect-ratio: 1 / 1;
-    width: unset;
   }
 }
 
